kustomize/argocd/argocd-local.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd.k3s-ingress
 namespace: argocd
 annotations:
  traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
 tls:
   - hosts:
       - argocd.k3s
 rules:
   - host: argocd.k3s
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: argocd-server
               port:
                 number: 80
